--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     color: white;
     background-image: url(https://ik.imagekit.io/Kavs17/mern/todolistbg.jpg?updatedAt=1701357043996);
     height:45em;
+    width:100vw;
     background-repeat:no-repeat;
     background-position: center;
     background-size:465px ;
