--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
     font-family: 'Roboto', sans-serif;
     color: white;
     background-image: url(https://ik.imagekit.io/Kavs17/mern/todolistbg.jpg?updatedAt=1701357043996);
-    height:45em;
+    height:100vh;
     width:100vw;
     background-repeat:no-repeat;
     background-position: center;
-    background-size:465px ;
+    background-size:465px  ;
+
     
     
 
@@ -16,6 +17,7 @@
     font-weight: 500;
     font-size:60px;
     text-align: center;
+    padding:10px;
 
 }
 .l1{
@@ -26,26 +28,27 @@
 }
 .l3{
     font-size:18px;
-    margin-left:40em;
+    margin-left:41em;
     font-weight:lighter;
-    line-height:0;
+    line-height:0.4;
 }
 .l2{
    font-size:1.6em;
-   margin-left:20.6em;
+   margin-left:21.2em;
    font-weight: bolder;
-   margin-top: 2.3em;
+   margin-top: 1.8em;
    
 }
 .l4{
     color:white;
-    margin-left:27.5em;
+    margin-left:28.2em;
     font-size:19.2px;
     font-weight:lighter;
 }
 .l5{
     background-color: orange;
-    margin-left:43em;
+   
+    margin-left:44em;
     width:7.5em;
     height:3em;
     font-size:1em;
@@ -59,6 +62,8 @@
     text-decoration: underline;
     color: whitesmoke;
     font-weight: lighter;
+    
+
 }
 
  
