--- a/style.css
+++ b/style.css
@@ -3,52 +3,50 @@
     color: white;
     background-image: url(https://ik.imagekit.io/Kavs17/mern/todolistbg.jpg?updatedAt=1701357043996);
     height:100vh;
-    width:100vw;
+    width: 100vw;
     background-repeat:no-repeat;
-    background-position: center;
-    background-size:465px  ;
-
-    
-    
+    background-size:465px 720px;
 
  
 }
 .mainhead{
     font-weight: 500;
-    font-size:60px;
+    font-size:58px;
+    width: 465px;
     text-align: center;
-    padding:10px;
+    padding-top:10px;
+    
 
 }
 .l1{
-   font-size:18.5px;
-   margin-left:30em;
+   font-size:18.7px;
    font-weight:lighter;
-   line-height:0;
+   margin-left:1em;
+   line-height:0.3;
 }
 .l3{
     font-size:18px;
-    margin-left:41em;
+    width: 465px;
+    text-align: center;
     font-weight:lighter;
-    line-height:0.4;
+    line-height:0.3;
 }
 .l2{
    font-size:1.6em;
-   margin-left:21.2em;
+   margin-left:0.5em;
    font-weight: bolder;
-   margin-top: 1.8em;
+   margin-top: 1.9em;
    
 }
 .l4{
     color:white;
-    margin-left:28.2em;
+    margin-left:0.5em;
     font-size:19.2px;
     font-weight:lighter;
 }
 .l5{
     background-color: orange;
-   
-    margin-left:44em;
+   margin-left:10.78em;
     width:7.5em;
     height:3em;
     font-size:1em;
@@ -59,12 +57,14 @@
 }
 .l6{
     text-align:center;
+    width: 465px;
     text-decoration: underline;
     color: whitesmoke;
     font-weight: lighter;
-    
+    font-size:16px;
 
 }
+
 
  
     
